--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,34 +1,27 @@
+<link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet" />
+<link rel="stylesheet" href="/stylesheets/navbar" />
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+    <a class="navbar-brand" href="/">Navbar</a>
+    <div class="middle-nav d-flex justify-content-between">
+      <ul class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item ms-5 me-5">
+          <a class="nav-link active" aria-current="page" href="#">Menu</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ms-5 me-5">
+          <a class="nav-link" href="#">About Us</a>
+        </li>
+        <li class="nav-item ms-5 me-5">
+          <a class="nav-link" href="#">Our Locations</a>
+        </li>
+        <li class="nav-item ms-5 me-5">
           <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
+    <button class="btn btn-outline-success" type="submit">
+      <i class="fa badge fa-lg" value="8">&#xf07a;</i>
+    </button>
   </div>
 </nav>
