--- a/views/bitburger/menu.ejs
+++ b/views/bitburger/menu.ejs
@@ -1,3 +1,5 @@
 <% layout('layouts/boilerplate') %>
 
-<div class="container"></div>
+<div class="container">
+  <div class="menu-title card w-100 text-center mt-5 mb-3 fs-1 pt-5 pb-5">Our Menu</div>
+</div>
