--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -2,3 +2,13 @@
   min-width: 95%;
   max-width: 95%;
 }
+
+.item-image {
+  max-height: 500px;
+}
+
+#quantityBtn {
+  border-radius: 7px;
+  max-height: 40px;
+  /* max-width: 100px; */
+}
