--- a/views/bitburger/menu.ejs
+++ b/views/bitburger/menu.ejs
@@ -4,22 +4,63 @@
 
 <div class="menu-title card text-center m-auto mt-5 mb-3 fs-1 pt-5 pb-5">Our Menu</div>
 <div class="container">
-  <% let itemCounter = 1 %> <% for (let item of menuItems) { %> <% if (item.category === "Burger") { %>
-  <div class="menu-subsection"><%=item.category%>! <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %></div>
 
-  <!-- If the item category is listed as dessert, display those items -->
+    <!-- Burger section of menu -->
 
-  <% if (item.category === "Pizza") { %> <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+  <div class="burger-container">
+    <div class="text-center align-center">
+        Burgers!
+    </div>
+    <% let itemCounter = 1 %>
 
-  <!-- If the item category is listed as dessert, display those items -->
+    <!-- iterates through the list of burgers and performs action for each item -->
+    <% for (let item of burgerList) { %>
+      <!-- Use a partial to create the category section of menu -->
+      <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+    </div>
 
-  <% if (item.category === "Fries") { %> <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+<!-- Pizza section of menu -->
+  <div class="pizza-container">
+    <div class="text-center align-center">
+        Pizza!
+    </div>
+    <% for (let item of pizzaList) { %>
+      <!-- Use a partial to create the category section of menu -->
+      <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+    </div>
 
-  <!-- If the item category is listed as dessert, display those items -->
+<!-- Fries section of menu -->
+  <div class="fries-container">
+    <div class="text-center align-center">
+        Fries!
+    </div>
+    <% for (let item of friesList) { %>
+      <!-- Use a partial to create the category section of menu -->
+      <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+    </div>
 
-  <% if (item.category === "Drinks") { %> <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+<!-- Drinks section of menu -->
+  <div class="drinks-container">
+    <div class="text-center align-center">
+        Drinks!
+    </div>
+    <% for (let item of drinksList) { %>
+      <!-- Use a partial to create the category section of menu -->
+      <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+    </div>
 
-  <!-- If the item category is listed as dessert, display those items -->
-
-  <% if (item.category === "Dessert") { %> <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% }} %>
+<!-- Dessert section of menu -->
+  <div class="dessert-container">
+    <div class="text-center align-center">
+        Dessert!
+    </div>
+    <% for (let item of dessertList) { %>
+      <!-- Use a partial to create the category section of menu -->
+      <%- include('../partials/menu', { item } )%> <% itemCounter++ %> <% } %>
+    </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
