--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -1,6 +1,34 @@
+nav {
+  background-color: black;
+}
+
+body {
+  background-color: #343b3b;
+}
+
 .menu-title {
   min-width: 95%;
   max-width: 95%;
+  font-family: "Vollkorn", serif;
+  background-color: #f1f1f1;
+}
+
+.food-container {
+  background-color: #f1f1f1;
+  border-radius: 7px;
+  padding: 35px 5px;
+}
+
+.menu-subsection {
+  font-family: "Knewave", cursive;
+  font-size: 4em;
+  color: #c4c4c7;
+  margin-top: 7rem;
+}
+
+#item-name {
+  font-family: "Lemon", cursive;
+  font-size: 1.2rem;
 }
 
 .item-image {
