--- a/views/bitburger/menu.ejs
+++ b/views/bitburger/menu.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
+<link href="https://fonts.googleapis.com/css2?family=Knewave&family=Lemon&family=Vollkorn:wght@900&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="/stylesheets/menu.css" />
 
 <div class="menu-title card text-center m-auto mt-5 mb-3 fs-1 pt-5 pb-5">Our Menu</div>
@@ -7,7 +8,7 @@
   <% let itemCounter = 1 %>
 
   <!-- Burger section of menu -->
-  <div class="text-center align-center mt-5 mb-3">Burgers!</div>
+  <div class="menu-subsection text-center align-center mb-5">Burgers!</div>
   <div class="food-container d-flex justify-content-start">
     <% for (let item of burgerList) { %>
     <!-- Use a partial to create the category section of menu -->
@@ -15,7 +16,7 @@
   </div>
 
   <!-- Pizza section of menu -->
-  <div class="text-center align-center mt-5 mb-3">Pizza!</div>
+  <div class="menu-subsection text-center align-center mb-5">Pizza!</div>
   <div class="food-container d-flex justify-content-start">
     <% for (let item of pizzaList) { %>
     <!-- Use a partial to create the category section of menu -->
@@ -23,7 +24,7 @@
   </div>
 
   <!-- Fries section of menu -->
-  <div class="text-center align-center mt-5 mb-3">Fries!</div>
+  <div class="menu-subsection text-center align-center mb-5">Fries!</div>
   <div class="food-container d-flex justify-content-start">
     <% for (let item of friesList) { %>
     <!-- Use a partial to create the category section of menu -->
@@ -31,7 +32,7 @@
   </div>
 
   <!-- Drinks section of menu -->
-  <div class="text-center align-center mt-5 mb-3">Drinks!</div>
+  <div class="menu-subsection text-center align-center mb-5">Drinks!</div>
   <div class="food-container d-flex justify-content-start">
     <% for (let item of drinksList) { %>
     <!-- Use a partial to create the category section of menu -->
@@ -39,7 +40,7 @@
   </div>
 
   <!-- Dessert section of menu -->
-  <div class="text-center align-center mt-5 mb-3">Dessert!</div>
+  <div class="menu-subsection text-center align-center mb-5">Dessert!</div>
   <div class="food-container d-flex justify-content-start">
     <% for (let item of dessertList) { %>
     <!-- Use a partial to create the category section of menu -->
