--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,13 +1,13 @@
 <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet" />
-<link rel="stylesheet" href="/stylesheets/navbar" />
+<link rel="stylesheet" href="/stylesheets/navbar.css" />
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Navbar</a>
     <div class="middle-nav d-flex justify-content-between">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item ms-5 me-5">
-          <a class="nav-link active" aria-current="page" href="#">Menu</a>
+          <a class="nav-link" aria-current="page" href="/bitburger">Menu</a>
         </li>
         <li class="nav-item ms-5 me-5">
           <a class="nav-link" href="#">About Us</a>
@@ -20,8 +20,8 @@
         </li>
       </ul>
     </div>
-    <button class="btn btn-outline-success" type="submit">
-      <i class="fa badge fa-lg" value="8">&#xf07a;</i>
+    <button class="bg-transparent" type="submit">
+      <i class="btn fa badge fa-lg" value="8">&#xf07a;</i>
     </button>
   </div>
 </nav>
