add font styling

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -22,7 +22,7 @@ body {
 .menu-subsection {
   font-family: "Knewave", cursive;
   font-size: 4em;
-  color: #c4c4c7;
+  color: #fdb050;
   margin-top: 7rem;
 }
 
