change styling to cart button and change modal z-index to allow it to display within a nest postition element

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -27,6 +27,6 @@ body {
 .name-text {
   font-family: "Chela One", cursive;
   font-size: 148px;
-  color: white;
+  color: #fdb050;
   letter-spacing: 0.05em;
 }
