--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,3 +1,11 @@
+.modal {
+  margin-top: 30%;
+}
+
+.modal-backdrop {
+  z-index: 0 !important;
+}
+
 .navbar-brand {
   color: white;
 }
@@ -5,15 +13,23 @@
   color: white;
 }
 
+.nav-link:hover {
+  color: #fdb050;
+}
+
 .badge:after {
   content: attr(value);
   font-size: 12px;
-  color: #fff;
-  background: red;
+  color: #fdb050;
+  background: #343b3b;
   border-radius: 50%;
-  padding: 0 5px;
+  padding: 2px 7px;
   position: relative;
   left: -8px;
   top: -10px;
   opacity: 0.9;
+}
+
+.badge:hover {
+  color: #fdb050;
 }
