--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -34,6 +34,18 @@ body {
 .item-image {
   max-height: 250px;
   min-height: 250px;
+  position: relative;
+}
+
+.item-qty {
+  background-color: #343b3b;
+  color: #fdb050;
+  padding: 30px 35px;
+  border-radius: 25%;
+  position: absolute;
+  left: 90px;
+  top: 150px;
+  opacity: 0.8;
 }
 
 #quantityBtn {
