--- a/views/partials/menuNav.ejs
+++ b/views/partials/menuNav.ejs
@@ -20,6 +20,6 @@
         </li>
       </ul>
     </div>
-    <%- include('./shoppingCart', { cart }) %>
+    <%- include('../cart/shoppingCart', { cart }) %>
   </div>
 </nav>
