close the menu modal once the order email is placed

--- a/views/cart/shoppingCart.ejs
+++ b/views/cart/shoppingCart.ejs
@@ -42,7 +42,7 @@
       <div class="modal-footer d-flex justify-content-between">
         <button type="button" class="btn btn-outline-secondary ms-5" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Go Back</button>
         <form action="/confirm-order" method="POST">
-          <input type="button" class="btn btn-success me-5" value="Place Order" onclick="sendEmail()" />
+          <input type="button" class="btn btn-success me-5" value="Place Order" onclick="sendEmail();" data-bs-dismiss="modal" />
         </form>
       </div>
     </div>
