--- a/views/partials/menuNav.ejs
+++ b/views/partials/menuNav.ejs
@@ -10,13 +10,7 @@
           <a class="nav-link" aria-current="page" href="/bitburger">Menu</a>
         </li>
         <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">About Us</a>
-        </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">Our Locations</a>
-        </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Sign Up</a>
         </li>
       </ul>
     </div>
