rename navbar file and add popup modals for user sign in and register

--- a/views/bitburger/menu.ejs
+++ b/views/bitburger/menu.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/menuNav', { cart }) %> <% layout('layouts/boilerplate') %><%- include ('../partials/flash') %>
+<%- include('../partials/navbar', { cart }) %> <% layout('layouts/boilerplate') %><%- include ('../partials/flash') %>
 
 <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Lemon&family=Vollkorn:wght@900&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="/stylesheets/menu.css" />
