--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,19 +9,9 @@
         <li class="nav-item ms-5 me-5">
           <a class="nav-link" aria-current="page" href="/bitburger">Menu</a>
         </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">About Us</a>
-        </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">Our Locations</a>
-        </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+        <li class="nav-item ms-5 me-5"><%-include('./userForms')%></li>
       </ul>
     </div>
-    <button class="bg-transparent" type="submit">
-      <i class="btn fa badge fa-lg" value="8">&#xf07a;</i>
-    </button>
+    <%- include('../cart/shoppingCart', { cart }) %>
   </div>
 </nav>
