--- a/views/cart/shoppingCart.ejs
+++ b/views/cart/shoppingCart.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/stylesheets/cart.css" />
 
 <!-- Button trigger modal -->
-<button class="bg-transparent" type="" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+<button class="btn bg-transparent" type="" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
   <i class="btn fa badge fa-lg" value="<%=cart ? cart.totalQty : 0%>">&#xf07a;</i>
 </button>
 
