--- a/views/partials/userForms.ejs
+++ b/views/partials/userForms.ejs
@@ -64,4 +64,4 @@
     </div>
   </div>
 </div>
-<a type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal">Sign Up</a>
+<a type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal">Sign In</a>
