--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -15,6 +15,25 @@
   opacity: 0.7;
 }
 
-#item-qty:hover {
-  opacity: 1;
+#item-price {
+  margin-left: 0px;
+}
+
+@media screen and (max-width: 958px) {
+  .cart-image {
+    max-width: 35px;
+  }
+
+  #item-qty {
+    border-radius: 50px;
+    color: #fdb050;
+    max-width: 10px;
+    padding: 5px;
+    opacity: 0.7;
+    font-size: small;
+  }
+
+  #item-price {
+    margin-left: 0px;
+  }
 }
