--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -11,12 +11,7 @@ body {
   max-width: 95%;
   font-family: "Vollkorn", serif;
   background-color: #f1f1f1;
-}
-
-.food-container {
-  background-color: #f1f1f1;
-  border-radius: 7px;
-  padding: 35px 5px;
+  /* margin-left: 25px; */
 }
 
 .menu-subsection {
@@ -26,30 +21,85 @@ body {
   margin-top: 7rem;
 }
 
-#item-name {
-  font-family: "Lemon", cursive;
-  font-size: 1.2rem;
+@media screen and (min-width: 958px) {
+  .food-container {
+    display: inline-flex;
+    width: 100%;
+    background-color: #f1f1f1;
+    border-radius: 7px;
+    padding: 35px 5px;
+  }
+
+  .card {
+    width: 25%;
+    margin-left: 65px;
+  }
+
+  #item-name {
+    font-family: "Lemon", cursive;
+    font-size: 1.2rem;
+  }
+
+  .item-image {
+    max-height: 250px;
+    min-height: 250px;
+    position: relative;
+  }
+
+  .item-qty {
+    background-color: #343b3b;
+    color: #fdb050;
+    padding: 30px 35px;
+    border-radius: 25%;
+    position: absolute;
+    left: 90px;
+    top: 150px;
+    opacity: 0.8;
+  }
+
+  #quantityBtn {
+    border-radius: 7px;
+    max-height: 40px;
+    /* max-width: 100px; */
+  }
 }
 
-.item-image {
-  max-height: 250px;
-  min-height: 250px;
-  position: relative;
-}
+/* Mobile devices */
+@media screen and (max-width: 958px) {
+  .menu-title {
+    min-width: 95%;
+    max-width: 95%;
+    font-family: "Vollkorn", serif;
+    background-color: #f1f1f1;
+    /* margin-left: 25px; */
+  }
 
-.item-qty {
-  background-color: #343b3b;
-  color: #fdb050;
-  padding: 30px 35px;
-  border-radius: 25%;
-  position: absolute;
-  left: 90px;
-  top: 150px;
-  opacity: 0.8;
-}
-
-#quantityBtn {
-  border-radius: 7px;
-  max-height: 40px;
-  /* max-width: 100px; */
+  .food-container {
+    width: 95%;
+    background-color: #f1f1f1;
+    border-radius: 7px;
+    padding: 35px 5px;
+    margin-left: 12px;
+  }
+  .item-card {
+    display: inline-flex;
+    width: 75%;
+    margin-left: 50px;
+    margin-bottom: 20px;
+  }
+  .item-image {
+    max-height: 250px;
+    min-height: 250px;
+    position: relative;
+  }
+  .item-qty {
+    background-color: #343b3b;
+    color: #fdb050;
+    padding: 20px 25px;
+    border-radius: 25%;
+    position: absolute;
+    left: 90px;
+    top: 150px;
+    opacity: 0.8;
+  }
 }
