--- a/views/bitburger/home.ejs
+++ b/views/bitburger/home.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>
+<%- include('../partials/homeNav', ) %><% layout('layouts/boilerplate') %>
 
 <link rel="stylesheet" href="/stylesheets/home.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -7,10 +7,8 @@
 
 <div class="home position-relative">
   <div class="position-absolute start-0 offset-1">
-    <p class="leading-text fs-1 mb-0">Satisfy your hunger</p>
+    <p class="leading-text mb-0">Satisfy your hunger</p>
     <p class="name-text mt-0 ms-5">BitBurger!</p>
-    <a href="/bitburger">
-      <button class="btn btn-outline-light mt-5 offset-4 fs-3 ps-4 pe-4">Check out our Menu!</button>
-    </a>
+    <a href="/bitburger" class="btn btn-outline-light mt-5 ps-4 pe-4" id="menu-btn">Check out our Menu!</a>
   </div>
 </div>
