--- a/views/partials/homeNav.ejs
+++ b/views/partials/homeNav.ejs
@@ -1,27 +1,20 @@
 <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet" />
 <link rel="stylesheet" href="/stylesheets/navbar.css" />
 
-<nav class="navbar navbar-expand-lg sticky-top" id="navbar">
+<nav class="navbar navbar-expand-lg sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Navbar</a>
+    <a class="navbar-brand" href="/">BitBurger</a>
     <div class="middle-nav d-flex justify-content-between">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item ms-5 me-5">
           <a class="nav-link" aria-current="page" href="/bitburger">Menu</a>
         </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">About Us</a>
-        </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">Our Locations</a>
-        </li>
-        <li class="nav-item ms-5 me-5">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+        <% if (user) { %>
+        <li class="nav-item ms-5 me-5"><%-include('./userOptions', { user })%></li>
+        <% } else { %>
+        <li class="nav-item ms-5 me-5"><%-include('./userForms')%></li>
+        <% } %>
       </ul>
     </div>
-    <button class="bg-transparent" type="submit">
-      <i class="btn fa badge fa-lg" value="8">&#xf07a;</i>
-    </button>
   </div>
 </nav>
